# pragmatic_cpp

./: .gitignore  CMakeLists.txt  README.md
ArgCountMacro/: CMakeLists.txt  main.cpp
AssertMacro1/: CMakeLists.txt  main.cpp
AssertMacro2/: CMakeLists.txt  main.cpp
AssertMacro3/: CMakeLists.txt  main.cpp
AssertMacro4/: CMakeLists.txt  main.cpp
AutoMacro/: CMakeLists.txt  main.cpp
AverageMacro/: CMakeLists.txt  main.cpp
BehaviourManagement/: CMakeLists.txt  main.cpp
CreateMacro/: CMakeLists.txt  main.cpp
DumpMacro/: CMakeLists.txt  main.cpp
EnhancedMessagesMacros/: CMakeLists.txt  main.cpp
FieldMarco/: CMakeLists.txt  main.cpp
HandleExceptionMacro/: CMakeLists.txt  main.cpp
HandlingMacro/: CMakeLists.txt  main.cpp
HideComplexityMacros/: CMakeLists.txt  main.cpp
InvisibleMacros/: CMakeLists.txt  main.cpp
LineNumber/: CMakeLists.txt  main.cpp
LoggingMacros/: CMakeLists.txt  main.cpp
LoggingMacrosExtended/: CMakeLists.txt  ConstExpressions.h  main.cpp
MacroUse/: CMakeLists.txt  main.cpp
MacrosInlineFunctions/: CMakeLists.txt  main.cpp
MaxMacro/: CMakeLists.txt  main.cpp
NestingMacros/: CMakeLists.txt  main.cpp
NestingMacrosLoop/: CMakeLists.txt  main.cpp
ScopeAndReturns/: CMakeLists.txt  main.cpp
SerialisingMacro/: CMakeLists.txt  main.cpp
SerialisingMacroExt/: CMakeLists.txt  main.cpp
SimpleTemplatesMacros/: CMakeLists.txt  main.cpp
SoWhatIsAMacro/: CMakeLists.txt  main.cpp
SystemInfo/: CMakeLists.txt  main.cpp
SystemInfoMacro/: CMakeLists.txt  main.cpp
SystemInfoScalable/: CMakeLists.txt  main.cpp
SystemInfoScalableMap/: CMakeLists.txt  main.cpp
TestingMacros/: CMakeLists.txt  main.cpp
include/: dataCenter.h  data_types.h  e01_introduction.h  register.h  spec.h  system_info.h  system_info_macro.h  system_info_macro_expanded.h  system_info_scalable.h  system_info_scalable_map.h
proto/: CMakeLists.txt  messages.proto
src/: dataCenter.cpp  e01_introduction.cpp  main  main.cpp  spec.cpp  system_info.cpp  system_info_scalable.cpp  system_info_scalable_map.cpp
