cmake_minimum_required(VERSION 3.28)
project(PragmaticCPP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(SystemInfo)
add_subdirectory(SystemInfoScalable)
add_subdirectory(SystemInfoScalableMap)
add_subdirectory(SystemInfoMacro)
add_subdirectory(SoWhatIsAMacro)
add_subdirectory(MaxMacro)
add_subdirectory(CreateMacro)
add_subdirectory(FieldMarco)
add_subdirectory(MacroUse)
add_subdirectory(HandleExceptionMacro)
add_subdirectory(ScopeAndReturns)
add_subdirectory(AutoMacro)
add_subdirectory(TestingMacros)
add_subdirectory(MacrosInlineFunctions)
add_subdirectory(InvisibleMacros)