cmake_minimum_required(VERSION 3.28)
project(PragmaticCPP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(SystemInfo)
add_subdirectory(SystemInfoScalable)
add_subdirectory(SystemInfoScalableMap)
add_subdirectory(SystemInfoMacro)
add_subdirectory(SoWhatIsAMacro)
add_subdirectory(MaxMacro)
add_subdirectory(CreateMacro)
add_subdirectory(FieldMarco)
add_subdirectory(MacroUse)
add_subdirectory(HandleExceptionMacro)
add_subdirectory(ScopeAndReturns)
add_subdirectory(AutoMacro)
add_subdirectory(TestingMacros)
add_subdirectory(MacrosInlineFunctions)
add_subdirectory(InvisibleMacros)
add_subdirectory(LineNumber)
add_subdirectory(DumpMacro)
add_subdirectory(ArgCountMacro)
add_subdirectory(AverageMacro)
add_subdirectory(SimpleTemplatesMacros)
add_subdirectory(NestingMacros)
add_subdirectory(NestingMacrosLoop)
add_subdirectory(LoggingMacros)
add_subdirectory(LoggingMacrosExtended)
add_subdirectory(AssertMacro1)
add_subdirectory(AssertMacro2)
add_subdirectory(AssertMacro3)
add_subdirectory(AssertMacro4)
add_subdirectory(EnhancedMessagesMacros)
add_subdirectory(BehaviourManagement)
add_subdirectory(HideComplexityMacros)
add_subdirectory(SerialisingMacro)
#add_subdirectory(SerialisingMacroExt)